if(CMAKE_CROSSCOMPILING)
	message(STATUS "Compiling libhw_ATtiny861 products.")
	add_subdirectory(PinA0_High)
	add_subdirectory(Led_Blink)
	add_subdirectory(Led_BlinkTwo)
	add_subdirectory(PinPort_Output)
else()
	message(STATUS "Skipping libhw_ATtiny861 products; these must be cross compiled.")
endif()
	